--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Resume/CV Dev - ThanhBui</title>
+<title>Resume/Nguyễn Cảnh Trung</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
-
 <div class="resume">
 <div class="resume_left">
  <div class="resume_profile">
-   <img src="avatar.jpg" alt="profile_pic">
+   <img src="avt.jpg" alt="profile_pic">
  </div>
  <div class="resume_content">
    <div class="resume_item resume_info">
      <div class="title">
-       <p class="bold">Bùi Công Thành</p>
-       <p class="regular">Developer</p>
+       <p class="bold">Nguyễn Cảnh Trung</p>
      </div>
      <ul>
        <li>
@@ -26,15 +23,16 @@
            <i class="fas fa-map-signs"></i>
          </div>
          <div class="data">
-           509, Phan Đình Phùng <br /> Tp. Quảng Ngãi, Quảng Ngãi
+           K2A53 Trường THPT Chuyên<br/>
+           Phan Bội châu <br />
          </div>
        </li>
        <li>
          <div class="icon">
            <i class="fas fa-mobile-alt"></i>
          </div>
-         <div class="data">
-           +84 944 32 92 92
+         <div class="data">            
+           0329711760
          </div>
        </li>
        <li>
@@ -42,15 +40,7 @@
            <i class="fas fa-envelope"></i>
          </div>
          <div class="data">
-           congthanhbkit03<br>@gmail.com
-         </div>
-       </li>
-       <li>
-         <div class="icon">
-           <i class="fab fa-weebly"></i>
-         </div>
-         <div class="data">
-           www.bcthanh.cf
+           canhtrung359<br>@gmail.com
          </div>
        </li>
      </ul>
@@ -62,30 +52,18 @@
      <ul>
        <li>
          <div class="skill_name">
-           HTML
-         </div>
-         <div class="skill_progress">
-           <span style="width: 80%;"></span>
-         </div>
-         <div class="skill_per">80%</div>
+          Scratch
+         </div>         
        </li>
        <li>
          <div class="skill_name">
-           CSS
-         </div>
-         <div class="skill_progress">
-           <span style="width: 70%;"></span>
-         </div>
-         <div class="skill_per">70%</div>
+           C++
+         </div>        
        </li>       
        <li>
          <div class="skill_name">
-           JS
-         </div>
-         <div class="skill_progress">
-           <span style="width: 90%;"></span>
-         </div>
-         <div class="skill_per">90%</div>
+           HTML
+         </div>         
        </li>
        <li>
          <div class="skill_name">
@@ -132,24 +110,7 @@
         </div>
         <div class="skill_per">80%</div>
       </li>
-      <li>
-        <div class="skill_name">
-          .NET
-        </div>
-        <div class="skill_progress">
-          <span style="width: 72%;"></span>
-        </div>
-        <div class="skill_per">72%</div>
-      </li>
-      <li>
-        <div class="skill_name">
-          LARAVEL
-        </div>
-        <div class="skill_progress">
-          <span style="width: 75%;"></span>
-        </div>
-        <div class="skill_per">75 %</div>
-      </li>
+      
      </ul>
    </div>
    <div class="resume_item resume_social">
@@ -163,34 +124,16 @@
          </div>
          <div class="data">
            <p class="semi-bold">Facebook</p>
-           <p><a href='https://www.facebook.com/cong.thanh.58' target="_blank">cong.thanh.58</a>
-         </div>
+           <p><a href='https://www.facebook.com/nguyen.canh.trung.642872' target="_blank">nguyen.canh.trung.642872</a>
+             </div>
        </li>
        <li>
          <div class="icon">
-           <i class="fab fa-skype"></i>
+           <i class="fab fa-Zalo"></i>
          </div>
          <div class="data">
-           <p class="semi-bold">Skype</p>
-           <p><a href='#'>cong.thanh.58</a></p>
-         </div>
-       </li>
-       <li>
-         <div class="icon">
-           <i class="fab fa-youtube"></i>
-         </div>
-         <div class="data">
-           <p class="semi-bold">Youtube</p>
-           <p><a href='https://youtube.com/kienthuctin' target="_blank">kienthuctin</a></p>
-         </div>
-       </li>
-       <li>
-         <div class="icon">
-           <i class="fab fa-linkedin"></i>
-         </div>
-         <div class="data">
-           <p class="semi-bold">Linkedin</p>
-           <p><a href='https://www.linkedin.com/in/bui-thanh/' target="_blank">bui-thanh</a></p>
+           <p class="semi-bold">Zalo</p>
+           <p><a href='#'>0329711760</a></p>
          </div>
        </li>
      </ul>
@@ -202,67 +145,108 @@
     <div class="title">
        <p class="bold">Giới thiệu</p>
      </div>
-    <p>Tôi là một chuyên viên phát triển phần mềm với hơn 10 năm tại các công ty trong và ngoài nước. Công việc của tôi cả về lập trình front-end lẫn back-end. Mong muốn được làm việc trong môi trường chuyên nghiệp, đồng nghiệp thân thiện và chế độ phúc lợi tốt.
+    <p>Tôi là Nguyễn Cảnh Trung Tôi là nguyễn Cảnh Trung, học sinh lớp chuyên tin 10A2 trường THPT Phan Bội Châu. Tôi yêu tin học và đam mê với công
+    nghệ,đặc biệt ngày nay khi công nghệ không ngừng phát triển, công nghệ AI ra đời lại đem đến cho tôi niềm đam mê chinh
+    phục và tìm hiểu về nó. Tôi mong SEAS 2025 sẽ đón nhận tôi để cho tôi cơ hội để trưởng thành, để bắt đầu những ước mơ lớn. 
         </p>
 </div>
 <div class="resume_item resume_work">
     <div class="title">
-       <p class="bold">Kinh nghiệm làm việc</p>
+       <p class="bold">Thành tích và chứng nhận</p>
      </div>
     <ul>
         <li>
-            <div class="date">2007 - 2008</div> 
+            <div class="date">2024 -2025</div> 
             <div class="info">
-                 <p class="semi-bold">Gameloft - Developer.</p> 
-              <p>Nhiệm vụ: porting</p>
-              <p>Ngôn ngữ sử dụng: J2ME</p>
-              <p>Công việc cụ thể: thay đổi code đã chạy được trên 1 điện thoại mẫu để có thể chạy được cho điện thoại khác nhau</p>
+                 <p class="semi-bold">lỚP 10.</p> 
+              <p>Học sinh giỏi</p>
+              <p>Giấy khen đóng góp tích cự cho lễ  kỷ niệm 50 năm thành lập trường</p>              
             </div>
         </li>
         <li>
-          <div class="date">2008 - 2009</div>
+          <div class="date">2023 - 2024</div>
           <div class="info">
-                 <p class="semi-bold">FPT Software - Developer.</p> 
-                 <p>Nhiệm vụ: phát triển theo yêu cầu</p>
-                 <p>Ngôn ngữ sử dụng: Java, C++, C#</p>
-                 <p>Công việc cụ thể: viết các chức năng theo yêu cầu. Thiết kế lại giao diện chương trình theo yêu cầu của khách hàng</p>
+                 <p class="semi-bold">Lớp 9</p> 
+                 <p>Thủ khoa HSG Tin cấp huyện</p>
+                 <p>Giải Nhì HSG Tin cấp tỉnh</p>
+                 <p>Giấy khen học sinh giỏi</p>
+                 <p>Giấy khen chủ tịch UBND huyện tặng học sinh giỏi tỉnh</p>
             </div>
         </li>
         <li>
-          <div class="date">2009 - Nay</div>
+          <div class="date">2022-2023</div>
           <div class="info">
-                 <p class="semi-bold">Giảng viên Đại học Phạm Văn Đồng.</p> 
-              <p>Giảng dạy các môn học: Lâp trình Web, Cơ sở Lập trình, Lập trình Python, Lập trình Scratch</p>
+                 <p class="semi-bold">Lớp 8./p> 
+              <p>Thủ khoa HSG Tin cấp huyện</p>
+              <p>Giấy khen học sinh giỏi</p>
             </div>
         </li>
         <li>
-            <div class="date">2019 - 2020</div>
+            <div class="date">2021 - 2022</div>
             <div class="info">
-                   <p class="semi-bold">ILINXC - Developer.</p> 
-                   <p>Nhiệm vụ: phát triển theo yêu cầu</p>
-                   <p>Ngôn ngữ sử dụng: PHP, .NET, jQuery</p>
-                   <p>Công việc cụ thể: thực hiện viết các chức năng theo yêu cầu; fix bugs phát sinh.</p>
+                   <p class="semi-bold">Lớp 7.</p> 
+                   <p>Giấy khen học sinh tiên tiến</p>                   
               </div>
           </li>
         <li>
-            <div class="date">2019 - Nay</div>
+            <div class="date">2020 - 2021</div>
             <div class="info">
-                   <p class="semi-bold">Mentor tại ĐH Trực tuyến Funix.</p> 
-                <p>Mentoring các môn: Thiết kế Web, Lập trình Web với Javascript, Lập trình Python</p>
+                   <p class="semi-bold">Lớp 6</p> 
+                   <p>Giấy khen học sinh tiên tiến</p> 
+                   <p>Học sinh giỏi huyện môn Vật lý</p> 
+              </div>
+          </li>
+          <li>
+            <div class="date">2019 - 2020</div>
+            <div class="info">
+                   <p class="semi-bold">Lớp 5</p> 
+                   <p>Giấy khen học sinh xuất sắc/p> 
+                   <p>Giải 3 Trạng nguyên Tiếng Việt cấp tỉnh</p> 
+              </div>
+          </li>
+          <li>
+            <div class="date">2018 - 2019</div>
+            <div class="info">
+                   <p class="semi-bold">Lớp 4</p> 
+                   <p>Giấy khen học sinh xuất sắc</p> 
+                   <p>Học sinh giỏi tin học trẻ cấp huyện</p> 
+              </div>
+          </li>
+          <li>
+            <div class="date">2017 - 2018</div>
+            <div class="info">
+                   <p class="semi-bold">Lớp 3</p> 
+                   <p>Giấy khen học sinh xuất sắc</p>                    
+              </div>
+          </li>
+          <li>
+            <div class="date">2016 - 2017</div>
+            <div class="info">
+                   <p class="semi-bold">Lớp 2</p> 
+                   <p>Giấy khen học sinh xuất sắc</p>                    
+              </div>
+          </li>
+          <li>
+            <div class="date">2015 - 2016</div>
+            <div class="info">
+                   <p class="semi-bold">Lớp 1</p> 
+                   <p>Giấy khen học sinh tiêu biểu</p>                    
+                   <p>Giấy khen học giỏi Violympic cấp trường môn Toán</p>  
+                   <p>Giải 3 sao giỏi cấp huyện</p>  
               </div>
           </li>
     </ul>
 </div>
 <div class="resume_item resume_education">
   <div class="title">
-       <p class="bold">Giáo dục</p>
+       <p class="bold">Hoạt động ngoại khóa</p>
      </div>
   <ul>
         <li>
-            <div class="date">2003 - 2008</div> 
+            <div class="date">Câu lạc bộ Phan bookaholic club</div> 
             <div class="info">
                  <p class="semi-bold">ĐH Bách khoa Tp. HCM</p> 
-                 <p>Ngành: Khoa học Máy tính</p>
+                 <p>nơi tôi cùng các bạn tổ chức các buổi bán sách gây quỹ thiện nguyện và tổ chức hoạt động “sách trao nụ cười” để giúp đỡ các em học sinh ở vùng cao và lan tỏa những giá trị tốt đẹp đến cộng đồng.</p>
             </div>
         </li>
         <li>
