--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Resume/Nguyễn Cảnh Trung</title>
+<title>CV/Nguyễn Cảnh Trung</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
@@ -91,26 +91,7 @@
           <span style="width: 85%;"></span>
         </div>
         <div class="skill_per">85%</div>
-      </li>
-      <li>
-        <div class="skill_name">
-          PYTHON
-        </div>
-        <div class="skill_progress">
-          <span style="width: 75%;"></span>
-        </div>
-        <div class="skill_per">75%</div>
-      </li>
-      <li>
-        <div class="skill_name">
-          JAVA
-        </div>
-        <div class="skill_progress">
-          <span style="width: 80%;"></span>
-        </div>
-        <div class="skill_per">80%</div>
-      </li>
-      
+      </li>      
      </ul>
    </div>
    <div class="resume_item resume_social">
@@ -176,7 +157,7 @@
         <li>
           <div class="date">2022-2023</div>
           <div class="info">
-                 <p class="semi-bold">Lớp 8./p> 
+                 <p class="semi-bold">Lớp 8.</p> 
               <p>Thủ khoa HSG Tin cấp huyện</p>
               <p>Giấy khen học sinh giỏi</p>
             </div>
@@ -244,16 +225,18 @@
   <ul>
         <li>
             <div class="date">Câu lạc bộ Phan bookaholic club</div> 
-            <div class="info">
-                 <p class="semi-bold">ĐH Bách khoa Tp. HCM</p> 
+            <div class="info">                 
                  <p>nơi tôi cùng các bạn tổ chức các buổi bán sách gây quỹ thiện nguyện và tổ chức hoạt động “sách trao nụ cười” để giúp đỡ các em học sinh ở vùng cao và lan tỏa những giá trị tốt đẹp đến cộng đồng.</p>
+                <div class="semi-bold">
+                  <link rel=" Xem thêm về Câu lạc bộ Phan bookaholic club" href="style.css">                    
+                </div>
             </div>
         </li>
         <li>
-          <div class="date">2011 - 2013</div>
+          <div class="date">Tham gia vì tiếng cười trẻ thơ</div>
           <div class="info">
                  <p class="semi-bold">ĐH Khoa học Huế</p> 
-                 <p>Ngành: Khoa học Máy tính</p>
+                 <p>hỗ trợ làng trẻ SOS</p>
             </div>
         </li>
     </ul>
