--- a/index.html
+++ b/index.html
@@ -94,6 +94,64 @@
       </li>      
      </ul>
    </div>
+   <div class="resume_item resume_skills">
+    <div class="title">
+      <p class="bold">Hoạt động ngoại khóa</p>
+    </div>
+    <ul>
+      <li>
+        <div class="skill_name">
+          Câu lạc bộ Phan bookaholic club
+        </div>  
+        <li>
+          <div class="date">Câu lạc bộ Phan bookaholic club</div> 
+          <div class="info">                 
+               <p>nơi tôi cùng các bạn tổ chức các buổi bán sách gây quỹ thiện nguyện và tổ chức hoạt động “sách trao nụ cười” để giúp đỡ các em học sinh ở vùng cao và lan tỏa những giá trị tốt đẹp đến cộng đồng.</p>
+              <div class="semi-bold">
+                <link rel=" Xem thêm về Câu lạc bộ Phan bookaholic club" href="style.css">                    
+              </div>
+          </div>
+      </li>         
+      </li>
+      <li>
+        <div class="skill_name">
+          C++
+        </div>        
+      </li>       
+      <li>
+        <div class="skill_name">
+          HTML
+        </div>         
+      </li>
+      <li>
+        <div class="skill_name">
+          JQUERY
+        </div>
+        <div class="skill_progress">
+          <span style="width: 88%;"></span>
+        </div>
+        <div class="skill_per">88%</div>
+      </li>
+      <li>
+       <div class="skill_name">
+         Bootstrap
+       </div>
+       <div class="skill_progress">
+         <span style="width: 82%;"></span>
+       </div>
+       <div class="skill_per">82%</div>
+     </li>
+     <li>
+       <div class="skill_name">
+         PHP
+       </div>
+       <div class="skill_progress">
+         <span style="width: 85%;"></span>
+       </div>
+       <div class="skill_per">85%</div>
+     </li>      
+    </ul>
+  </div>
    <div class="resume_item resume_social">
      <div class="title">
        <p class="bold">Mạng xã hội</p>
