--- a/index.html
+++ b/index.html
@@ -137,17 +137,15 @@
      </div>
     <ul>
         <li>
-            <div class="date">2024 -2025</div> 
-            <div class="info">
-                 <p class="semi-bold">lỚP 10.</p> 
+            <div class="date">2024 -2025| lớp 10 </div> 
+            <div class="info">                
               <p>Học sinh giỏi</p>
               <p>Giấy khen đóng góp tích cự cho lễ  kỷ niệm 50 năm thành lập trường</p>              
             </div>
         </li>
         <li>
-          <div class="date">2023 - 2024</div>
-          <div class="info">
-                 <p class="semi-bold">Lớp 9</p> 
+          <div class="date">2023 - 2024| Lớp 9</div>
+          <div class="info">                 
                  <p>Thủ khoa HSG Tin cấp huyện</p>
                  <p>Giải Nhì HSG Tin cấp tỉnh</p>
                  <p>Giấy khen học sinh giỏi</p>
@@ -155,62 +153,54 @@
             </div>
         </li>
         <li>
-          <div class="date">2022-2023</div>
-          <div class="info">
-                 <p class="semi-bold">Lớp 8.</p> 
+          <div class="date">2022-2023| Lớp 8</div>
+          <div class="info">                
               <p>Thủ khoa HSG Tin cấp huyện</p>
               <p>Giấy khen học sinh giỏi</p>
             </div>
         </li>
         <li>
-            <div class="date">2021 - 2022</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 7.</p> 
+            <div class="date">2021 - 2022| Lớp 7</div>
+            <div class="info">                 
                    <p>Giấy khen học sinh tiên tiến</p>                   
               </div>
           </li>
         <li>
-            <div class="date">2020 - 2021</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 6</p> 
+            <div class="date">2020 - 2021| Lớp 6</div>
+            <div class="info">               
                    <p>Giấy khen học sinh tiên tiến</p> 
                    <p>Học sinh giỏi huyện môn Vật lý</p> 
               </div>
           </li>
           <li>
-            <div class="date">2019 - 2020</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 5</p> 
+            <div class="date">2019 - 2020| Lớp 5</div>
+            <div class="info">                  
                    <p>Giấy khen học sinh xuất sắc/p> 
                    <p>Giải 3 Trạng nguyên Tiếng Việt cấp tỉnh</p> 
               </div>
           </li>
           <li>
-            <div class="date">2018 - 2019</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 4</p> 
+            <div class="date">2018 - 2019| Lớp 4</div>
+            <div class="info">                
                    <p>Giấy khen học sinh xuất sắc</p> 
                    <p>Học sinh giỏi tin học trẻ cấp huyện</p> 
               </div>
           </li>
           <li>
-            <div class="date">2017 - 2018</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 3</p> 
+            <div class="date">2017 - 2018| Lớp 3</div>
+            <div class="info">                  
                    <p>Giấy khen học sinh xuất sắc</p>                    
               </div>
           </li>
           <li>
-            <div class="date">2016 - 2017</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 2</p> 
+            <div class="date">2016 - 2017| Lớp 2</div>
+            <div class="info">                   
                    <p>Giấy khen học sinh xuất sắc</p>                    
               </div>
           </li>
           <li>
-            <div class="date">2015 - 2016</div>
-            <div class="info">
-                   <p class="semi-bold">Lớp 1</p> 
+            <div class="date">2015 - 2016| Lớp 1</div>
+            <div class="info">                
                    <p>Giấy khen học sinh tiêu biểu</p>                    
                    <p>Giấy khen học giỏi Violympic cấp trường môn Toán</p>  
                    <p>Giải 3 sao giỏi cấp huyện</p>  
