--- a/index.html
+++ b/index.html
@@ -47,8 +47,43 @@
    </div>
    <div class="resume_item resume_skills">
      <div class="title">
-       <p class="bold">Các kỹ năng</p>
+       <p class="bold">Các Ngôn ngữ và chứng chỉ</p>
      </div>
+    </div>
+    <ul>
+      <li>
+        <div class="icon">
+          <i class="fas fa-map-signs"></i>
+        </div>
+        <div class="data">
+          Scratch          
+        </div>
+      </li>
+      <li>
+        <div class="icon">
+          <i class="fas fa-mobile-alt"></i>
+        </div>
+        <div class="data">            
+         C++
+        </div>
+      </li>
+      <li>
+        <div class="icon">
+          <i class="fas fa-envelope"></i>
+        </div>
+        <div class="data">
+          HTML
+        </div>
+      </li>
+      <li>
+        <div class="icon">
+          <i class="fas fa-envelope"></i>
+        </div>
+        <div class="data">
+          Chứng chỉ IC3
+        </div>
+      </li>
+    </ul>
      <ul>
        <li>
          <div class="skill_name">
