--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    </div>
    <div class="resume_item resume_skills">
      <div class="title">
-       <p class="bold">Các Ngôn ngữ và chứng chỉ</p>
+       <p class="bold">Các kỹ năng</p>
      </div>
    
     <ul>
@@ -84,50 +84,7 @@
         </div>
       </li>
     </ul>
-     <ul>
-       <li>
-         <div class="skill_name">
-          Scratch
-         </div>         
-       </li>
-       <li>
-         <div class="skill_name">
-           C++
-         </div>        
-       </li>       
-       <li>
-         <div class="skill_name">
-           HTML
-         </div>         
-       </li>
-       <li>
-         <div class="skill_name">
-           JQUERY
-         </div>
-         <div class="skill_progress">
-           <span style="width: 88%;"></span>
-         </div>
-         <div class="skill_per">88%</div>
-       </li>
-       <li>
-        <div class="skill_name">
-          Bootstrap
-        </div>
-        <div class="skill_progress">
-          <span style="width: 82%;"></span>
-        </div>
-        <div class="skill_per">82%</div>
-      </li>
-      <li>
-        <div class="skill_name">
-          PHP
-        </div>
-        <div class="skill_progress">
-          <span style="width: 85%;"></span>
-        </div>
-        <div class="skill_per">85%</div>
-      </li>      
-     </ul>
+     
    </div>
    <div class="resume_item resume_social">
      <div class="title">
