--- a/index.html
+++ b/index.html
@@ -48,43 +48,42 @@
    <div class="resume_item resume_skills">
      <div class="title">
        <p class="bold">Các kỹ năng</p>
-     </div>
-   
-    <ul>
-      <li>
-        <div class="icon">
-          <i class="fas fa-map-signs"></i>
-        </div>
-        <div class="data">
-          Scratch          
-        </div>
-      </li>
-      <li>
-        <div class="icon">
-          <i class="fas fa-mobile-alt"></i>
-        </div>
-        <div class="data">            
-         C++
-        </div>
-      </li>
-      <li>
-        <div class="icon">
-          <i class="fas fa-envelope"></i>
-        </div>
-        <div class="data">
-          HTML
-        </div>
-      </li>
-      <li>
-        <div class="icon">
-          <i class="fas fa-envelope"></i>
-        </div>
-        <div class="data">
-          Chứng chỉ IC3
-        </div>
-      </li>
-    </ul>
-     
+     </div>   
+     <ul>
+       <li>
+         <div class="skill_name">
+          Scratch
+         </div>    
+         <div class="skill_progress">
+          <span style="width: 70%;"></span>
+        </div>     
+       </li>
+       <li>
+         <div class="skill_name">
+           C++
+         </div>   
+         <div class="skill_progress">
+          <span style="width: 100%;"></span>
+        </div>      
+       </li>       
+       <li>
+         <div class="skill_name">
+           HTML
+         </div>     
+         <div class="skill_progress">
+          <span style="width: 30%;"></span>
+        </div>     
+       </li>
+       <li>
+         <div class="skill_name">
+           JQUERY
+         </div>
+         <div class="skill_progress">
+           <span style="width: 88%;"></span>
+         </div>
+         <div class="skill_per">88%</div>
+       </li>       
+     </ul>
    </div>
    <div class="resume_item resume_social">
      <div class="title">
