--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           Scratch
          </div>    
          <div class="skill_progress">
-          <span style="width: 70%;"></span>
+          <span style="width: 80%;"></span>
         </div>     
        </li>
        <li>
@@ -101,6 +101,25 @@
        </li>
      </ul>
    </div>
+   <div class="resume_item resume_social">
+    <div class="title">
+      <p class="bold">Xem thêm</p>
+    </div>
+    <ul>
+      <li>
+          <div class="data">
+          <p class="semi-bold">Thành tích & chứng nhận</p>
+          <p><a href='https://www.facebook.com/nguyen.canh.trung.642872' target="_blank">Xem ảnh</a>
+          </div>
+      </li>
+      <li>
+        <div class="data">
+          <p class="semi-bold">Ngoại khóa</p>
+          <p><a href='https://www.facebook.com/nguyen.canh.trung.642872' target="_blank">Xem thêm</a>
+          </div>
+      </li>
+    </ul>
+  </div>
  </div>
 </div>
 <div class="resume_right">
@@ -157,7 +176,7 @@
           <li>
             <div class="date">2019 - 2020| Lớp 5</div>
             <div class="info">                  
-                   <p>Giấy khen học sinh xuất sắc/p> 
+                   <p>Giấy khen học sinh xuất sắc</p>> 
                    <p>Giải 3 Trạng nguyên Tiếng Việt cấp tỉnh</p> 
               </div>
           </li>
@@ -196,23 +215,10 @@
      </div>
   <ul>
         <li>
-            <div class="date">Câu lạc bộ Phan bookaholic club</div> 
-            <div class="info">                 
-                 <p>nơi tôi cùng các bạn tổ chức các buổi bán sách gây quỹ thiện nguyện và tổ chức hoạt động “sách trao nụ cười” để giúp đỡ các em học sinh ở vùng cao và lan tỏa những giá trị tốt đẹp đến cộng đồng.</p>
-                <div class="semi-bold">
-                  <link rel=" Xem thêm về Câu lạc bộ Phan bookaholic club" href="https://www.google.com.vn/?hl=vi">                    
-                  <p><a href='"https://www.google.com.vn/?hl=vi"' target="_blank">Xem thêm về Câu lạc bộ Phan bookaholic club</a></p>
-                </div>
-            </div>
+            <div class="date">Câu lạc bộ Phan bookaholic club</div>             
         </li>
         <li>
-          <div class="date">Tham gia vì tiếng cười trẻ thơ</div>
-          <div class="info">                 
-                 <p>hỗ trợ làng trẻ SOS</p>
-                 <div class="semi-bold">
-                  <link rel=" Xem thêm về Câu lạc bộ Phan bookaholic club" href="https://www.google.com.vn/?hl=vi">                    
-                </div>
-            </div>
+         <div class="date">Tham gia vì tiếng cười trẻ thơ</div>       
         </li>
     </ul>
 </div>
@@ -229,6 +235,5 @@
 </div>
 </div>
 </div>
-
 </body>
 </html>
