--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <li>
         <div class="data">
           <p class="semi-bold">Ngoại khóa</p>
-          <p><a href='https://www.facebook.com/nguyen.canh.trung.642872' target="_blank">Xem thêm</a>
+          <p><a href='https://tiephoa.github.io/vidu2/ngoaikhoa.html' target="_blank">Xem thêm</a>
           </div>
       </li>
     </ul>
@@ -141,7 +141,7 @@
             <div class="date">2024 -2025| lớp 10 </div> 
             <div class="info">                
               <p>Học sinh giỏi</p>
-              <p>Giấy khen đóng góp tích cự cho lễ  kỷ niệm 50 năm thành lập trường</p>              
+              <p>Giấy khen đóng góp tích cực cho lễ  kỷ niệm 50 năm thành lập trường</p>              
             </div>
         </li>
         <li>
