--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <li>
         <div class="data">
           <p class="semi-bold">Ngoại khóa</p>
-          <p><a href='https://tiephoa.github.io/vidu2/ngoaikhoa.html' target="_blank">Xem thêm</a>
+          <p><a href='ngoaikhoa.html' target="_blank">Xem thêm</a>
           </div>
       </li>
     </ul>
